# OOSC-25_EnE

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  backend_requirements.txt  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_entity_pipeline.py  test_orchestration.py  test_voice.py  test_voice_fix.py
frontend/: .env.example  components.json
frontend/src/ai/: dev.ts
frontend/src/ai/flows/: agent-provenance-tracking.ts  ai-suggestions-during-meeting.ts  confidence-scores-for-suggestions.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/meeting/[meetingId]/: page.tsx
frontend/src/app/meeting/[meetingId]/components/: ai-suggestions.tsx  current-agent-indicator.tsx  live-meeting-client.tsx  live-transcript.tsx  replay-timeline-button.tsx  video-placeholder.tsx
frontend/src/components/: logo.tsx
frontend/src/components/dashboard/: meetings-card.tsx
frontend/src/lib/: mock-data.ts
frontend/src/types/: index.ts
research/: speechHandler.py
src/: checkagent.py  companyNews.py  companyProfileAgent.py  entityExtractor.py  event_bus.py  extracted_data.json  marketCompetitor.py  orchestrator.py  personEnrichment.py  ranking_agent.py  retriever_agent.py  suggestion_agent.py  ui_agent.py  voice.py
